# canelevation

./: .dockerignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  environment.yml  mypy.ini  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
docker/: Dockerfile  build  cibuild  console  format  lint  stac  test
examples/: collection.json
examples/AB_FortMcMurray2018_20180518_NAD83CSRS_UTMZ12_1km_E4760_N62940_CQL1_CLASS/: AB_FortMcMurray2018_20180518_NAD83CSRS_UTMZ12_1km_E4760_N62940_CQL1_CLASS.json
scripts/: lint  test  update-examples
src/stactools/canelevation/: __init__.py  commands.py  constants.py  stac.py  utils.py
tests/: test_commands.py  test_module.py  test_stac.py
